--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,11 +7,12 @@
 @import url("./collapse.css");
 @import url("./navigation.css");
 @import url("./card.css");
-@import url("./templates/template-default.css");
+@import url("./templates.css");
 @import url("level.css");
 @import url("modal.css");
 @import url("avatar.css");
 @import url("preview.css");
+@import url("mobile.css");
 
 *,
 *::before,
@@ -40,62 +41,50 @@ ul {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  width: 50vw;
 }
 
-.scrollable-content {
+/* .scrollable-content {
   height: clamp(100vh, 100vh, 100vh);
-  width: clamp(384px, 100vw, 50vw);
+  width: clamp(480px, 50%, 50w);
   margin: 0 auto;
   padding: 0 1rem;
-  /* padding-top: 2vh; */
+  flex: 1 0 0%;
   background: var(--paper-background);
   overflow-y: auto;
   align-items: stretch;
 }
+*/
 
-.grid-columns-2 {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
+.editor {
+  margin: 0 auto;
+  width: 100%;
 }
+.scrollable-content {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  background: var(--paper-background);
+  overflow: auto;
+}
+
+/* .grid-columns-2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 0.5rem;
+} */
 
 .scroll-decoration {
   position: absolute;
   bottom: 0;
   left: 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  width: 1rem;
-  height: 100%;
+  width: auto;
+  overflow: hidden;
+  height: 4rem;
   pointer-events: none;
   z-index: 1;
-}
-
-.card-list {
-  padding: 1rem 0.5em;
-  display: grid;
-  gap: 0.5rem;
-}
-
-.section {
-  background-color: var(--white);
-  border-radius: 0.5rem;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  box-shadow: 0 0 1px var(--shadow);
-  /* width: clamp(480px, 100%, 768px); */
-}
-
-.section-header {
-  padding: 0.75rem 1rem;
-  border-bottom: 1px solid var(--input-background);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.section-content {
-  padding: 1rem;
 }
 
 /* Progress */
