--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -2,17 +2,18 @@
   top: 0;
   z-index: 1;
   overflow: hidden;
-  height: 100%;
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
-  background-color: var(--shadow);
-  color: var(--secondary);
-  fill: var(--secondary);
+  position: sticky;
+  height: auto;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
+  background-color: var(--clr-accent);
+  color: var(--white);
+  fill: var(--white);
   display: flex;
+  flex-wrap: wrap-reverse;
   flex-direction: row;
-  padding: 2.5rem 2rem;
-  margin: 0;
-  min-width: 384px;
-  width: 100%;
+  padding: 1rem 2rem;
+  /* margin: 0 auto; */
+  /* width: clamp(384px, 100%, 98%); */
   line-height: 0;
   align-items: center;
   justify-content: space-between;
@@ -21,21 +22,23 @@
 .app-title {
   font-size: 1.9rem;
   font-weight: 600;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
   text-transform: uppercase;
+  display: flex;
   text-align: center;
 }
 
 .github-icon {
-  transition: all cubic-bezier(0.4, 0, 0.2, 1) 1s;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
   width: 40px;
   height: 40px;
 }
 .app-nav.shrink {
-  padding: 1.5rem 1rem;
-  background-color: white;
+  padding: 0.5rem 1rem;
+  opacity: 0.85;
   box-shadow: 0 0 3px var(--shadow);
-  color: var(--secondary);
-  fill: var(--secondary);
+  color: var(--white);
+  fill: var(--white);
 }
 
 .github-icon.shrink {
@@ -47,5 +50,8 @@
 .app-title.shrink {
   font-size: 1.1rem;
   font-weight: 600;
+  display: flex;
+  flex-wrap: wrap;
+
   text-transform: uppercase;
 }
