--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -1,28 +1,32 @@
 .preview-wrapper {
-  position: relative;
+  position: fixed;
   top: 0px;
   bottom: 0px;
   right: 0px;
-  width: 100%;
-  inset: 0px;
+  width: 50%;
   flex: 1 1 0%;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
   background-color: var(--blue-darkest);
-  color: rgb(255, 255, 255);
-  /* user-select: none; */
-  z-index: 1;
+  color: var(--white);
+  user-select: none;
+  z-index: auto;
 }
 
 .page {
-  display: block;
-  size: 7in 9.25in;
-  margin: 27mm 16mm 27mm 16mm;
+  display: flex;
+  /* width: 100%; */
+  /* height: 100%; */
+  width: 210mm;
+  height: 297mm;
+  overflow: auto;
+  /* margin: 27mm 16mm 27mm 16mm; */
   overflow: auto;
   border-radius: 0.25rem;
-  font-size: smaller;
+  /* font-size: smaller; */
   background-color: white;
 }
 
