--- a/src/styles/snippets.css
+++ b/src/styles/snippets.css
@@ -36,6 +36,10 @@
   flex-direction: column;
 }
 
+.margin-auto {
+  margin: 0 auto;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -44,6 +48,11 @@
 .space-between {
   justify-content: space-between;
   align-items: center;
+}
+
+.items-center {
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-end {
