--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -67,29 +67,29 @@
 }
 
 .level-1 {
-  --selected-background: var(--orange-lighter);
-  --selected-thumb: var(--orange-medium);
-  --selected-thumb-hover: var(--orange-light);
+  --selected-background: hsl(var(--orange), 85%);
+  --selected-thumb: hsl(var(--orange), 55%);
+  --selected-thumb-hover: hsl(var(--orange), 80%);
   --position-thumb: 0%;
 }
 
 .level-2 {
-  --selected-background: var(--green-lighter);
-  --selected-thumb: var(--green-medium);
-  --selected-thumb-hover: var(--green-light);
+  --selected-background: hsl(var(--green), 85%);
+  --selected-thumb: hsl(var(--green), 65%);
+  --selected-thumb-hover: hsl(var(--green), 80%);
   --position-thumb: 100%;
 }
 
 .level-3 {
-  --selected-background: var(--blue-lighter);
-  --selected-thumb: var(--blue-medium);
-  --selected-thumb-hover: var(--blue-light);
+  --selected-background: hsl(var(--blue), 85%);
+  --selected-thumb: hsl(var(--blue), 65%);
+  --selected-thumb-hover: hsl(var(--blue), 80%);
   --position-thumb: 200%;
 }
 
 .level-4 {
-  --selected-background: var(--violet-lighter);
-  --selected-thumb: var(--violet-medium);
-  --selected-thumb-hover: var(--violet-light);
+  --selected-background: hsl(var(--violet), 85%);
+  --selected-thumb: hsl(var(--violet), 65%);
+  --selected-thumb-hover: hsl(var(--violet), 80%);
   --position-thumb: 300%;
 }
