--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -2,9 +2,10 @@
   position: fixed;
   top: 0px;
   bottom: 0px;
-  right: 0px;
-  width: 50%;
-  flex: 1 1 0%;
+  right: 0;
+  border: 4px solid var(--border);
+  width: max-content;
+  flex: 0 1 0%;
   display: flex;
   flex-shrink: 0;
   align-items: center;
