--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,6 +1,7 @@
 .card-list {
   padding: 1rem 0.5em;
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 0.5rem;
 }
@@ -10,7 +11,7 @@
   color: var(--clr-accent);
   height: fit-content;
   width: clamp(200px, 100%, 480px);
-  box-shadow: 0 0 8px currentColor;
+  border: 1px solid hsla(var(--blue), 50%, 0.25);
 }
 
 .card.rounded {
@@ -19,7 +20,10 @@
 
 .card-header {
   padding: 0.75rem 1rem;
-  border-bottom: 1px solid var(--shadow);
+  border-bottom: 1px solid hsla(var(--blue), 50%, 0.15);
+  background: hsla(var(--blue), 50%, 0.1);
+
+  width: 100%;
   display: flex;
   align-items: center;
   text-transform: uppercase;
@@ -35,4 +39,13 @@
   display: flex;
   justify-items: center;
   align-items: center;
+}
+
+.card-footer {
+  padding: 0.75rem 1rem;
+  width: 100%;
+  border-top: 1px solid hsla(var(--blue), 50%, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
