--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -2,7 +2,7 @@
 .collapse-container:not(:last-child) {
   margin-bottom: 0.5rem;
   border-radius: 0;
-  border-bottom: 1px solid var(--input-background);
+  border-bottom: 1px solid var(--shadow);
 }
 
 .collapse-container {
