--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,28 +2,30 @@
 :root {
   /* Rule 60 30 10 */
   --clr-neutral: 220, 50%, 95%;
-  --clr-complementary: 140, 35%, 75%;
-  --color: hsl(140, 35%, 78%);
-  --clr-accent: 260, 100%, 95%;
+  --clr-complementary: 0, 0%, 100%;
+  --clr-accent: 260 60% 45%;
 
   /* Basic colors */
   --black: 0, 0%, 0%;
   --white: 0, 0%, 100%;
-  /* --grey: 180, 0%, 50%; */
-  --grey: 180, 0%, 90%;
+  --grey: 180, 0%, 45%;
   --green: 100, 65%;
   --orange: 45, 80%;
-  --red: 0, 100%;
+  --red: 340, 60%;
   --blue: 220, 90%;
   --violet: 260, 90%;
 
-  --shadow: hsla(var(--black), 0.15);
+  /* Shadows and borders */
+  --shadow: hsla(var(--black), 0.1);
+  --border: hsla(var(--black), 0.15);
 
-  /* Text */
-  --clr-text: hsl(var(--white));
+  /* Typography */
+  --clr-text-light: hsl(var(--white));
   --clr-text-dark: hsl(var(--black));
+  --clr-text-muted: hsl(var(--grey));
 
-  /*  */
+  /* Transition */
+  --smooth: all 0.5s 0s ease;
 
   --paper-background: rgb(244, 244, 244);
   --background-input: #eff2f9;
@@ -31,40 +33,6 @@
   --label-color: rgb(130, 139, 162);
   --input-background: #eff2f9;
 
-  /* Colors */
-  /* Darkest */
-  --orange-darkest: hsl(30, 94%, 27%);
-  --red-darkest: hsl(0, 94%, 27%);
-  --green-darkest: hsl(140, 94%, 27%);
-  --blue-darkest: hsl(220, 94%, 27%);
-  --violet-darkest: hsl(260, 94%, 27%);
-  /* Dark */
-  --orange-dark: hsl(30, 94%, 40%);
-  --red-dark: hsl(0, 94%, 40%);
-  --green-dark: hsl(140, 74%, 40%);
-  --blue-dark: hsl(220, 74%, 40%);
-  --violet-dark: hsl(260, 94%, 40%);
-  /* Medium */
-  --orange-medium: hsl(30, 94%, 65%);
-  --red-medium: hsl(0, 94%, 65%);
-  --green-medium: hsl(140, 74%, 65%);
-  --blue-medium: hsl(220, 74%, 65%);
-  --violet-medium: hsl(260, 74%, 65%);
-  /* Light */
-  --orange-light: hsl(40, 94%, 80%);
-  --red-light: hsl(0, 94%, 80%);
-  --green-light: hsl(140, 74%, 80%);
-  --blue-light: hsl(220, 74%, 80%);
-  --violet-light: hsl(260, 74%, 80%);
-  /* Lighter */
-  --orange-lighter: hsl(40, 94%, 92%);
-  --red-lighter: hsl(0, 94%, 92%);
-  --green-lighter: hsl(140, 74%, 92%);
-  --blue-lighter: hsl(220, 74%, 92%);
-  --violet-lighter: hsl(260, 74%, 92%);
-
   --disabled-background: hsl(240, 10%, 95%);
   --disabled-color: hsl(240, 10%, 80%);
-
-  --clr-accent: var(--violet-darkest);
 }
