--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -4,20 +4,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--shadow);
+  background: hsla(var(--blue), 10%, 0.4);
   z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.modal-window {
-  background: var(--white);
-  border-radius: 0.25rem;
-  padding: 1rem;
-  width: clamp(250px, 100%, 540px);
-  max-height: 90vh;
-  overflow-y: auto;
 }
 
 .modal-close {
@@ -30,10 +21,13 @@
 
 .modal {
   position: relative;
-  width: 100%;
+  width: clamp(250px, 100%, 540px);
+  max-height: 90vh;
+  overflow-y: auto;
   max-width: 540px;
   background-color: rgb(255, 255, 255);
   border-radius: 6px;
+
   z-index: 2;
   padding: 32px 40px;
 }
