--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   width: clamp(48px, 100%, 250px);
+  height: clamp(48px, 100%, 250px);
 }
 
 .level-selector {
@@ -35,6 +36,8 @@
 
 .level {
   flex: 1;
+  min-width: 40px;
+  min-height: 40px;
   position: relative;
 }
 
