--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,11 +7,18 @@
 }
 
 .card {
+  overflow: hidden;
+
   background-color: hsl(var(--clr-complementary));
+  background: rgba(255, 255, 255, 0.07);
+  border-radius: 0.75rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   color: var(--clr-accent);
   height: fit-content;
   width: clamp(200px, 100%, 480px);
-  border: 1px solid hsla(var(--blue), 50%, 0.25);
 }
 
 .card.rounded {
@@ -20,9 +27,9 @@
 
 .card-header {
   padding: 0.75rem 1rem;
-  border-bottom: 1px solid hsla(var(--blue), 50%, 0.15);
-  background: hsla(var(--blue), 50%, 0.1);
-
+  border-bottom: 1px solid var(--border);
+  color: hsla(var(--white), 0.75);
+  /* background: hsla(var(--blue), 50%, 0.1); */
   width: 100%;
   display: flex;
   align-items: center;
