Playing with dark/light

--- a/src/styles/color-switcher.css
+++ b/src/styles/color-switcher.css
@@ -19,7 +19,7 @@
 .toggle {
   height: 4.063rem;
   width: 8.125rem;
-  background: hsla(var(--black), 0.15);
+  background: hsla(var(--black), 0.35);
   border-radius: 0.75rem;
   padding: 0.75rem;
   position: relative;
@@ -27,22 +27,21 @@
   cursor: pointer;
 }
 
-.toggle::before {
+/* .toggle::before {
   content: "";
   display: block;
   height: 2.563rem;
   width: 2.563rem;
   border-radius: 100%;
-  background: hsla(var(--white), 1);
+  z-index: 5;
   position: absolute;
-  z-index: 2;
   transform: translateX(0);
   transition: transform 0.5s ease, background 0.5s ease;
 }
 
 .toggle.moon::before {
   transform: translateX(4.063rem);
-}
+} */
 
 .toggle input {
   opacity: 0;
@@ -59,17 +58,36 @@
 }
 
 .toggle .icons svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 1.875rem;
   width: 1.875rem;
   z-index: 0;
 }
 
 .sun {
-  fill: hsla(var(--orange), 55%, 1);
-  color: hsla(var(--orange), 55%, 1);
+  transform: rotate(0deg);
+  fill: hsla(var(--light), 0.9);
+  color: hsla(var(--light), 0.9);
+  transition: transform 0.5s ease;
 }
 
 .moon {
+  transform: rotate(0deg);
+  fill: hsla(var(--dark), 0.9);
+  color: hsla(var(--dark), 0.9);
+  transition: transform 0.5s ease;
+}
+
+.sun.enabled {
+  transform: rotate(180deg);
+  fill: hsla(var(--orange), 65%, 1);
+  color: hsla(var(--orange), 65%, 1);
+}
+
+.moon.enabled {
+  transform: rotate(90deg);
   fill: hsla(var(--blue), 55%, 1);
   color: hsla(var(--blue), 55%, 1);
 }
