--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,8 +48,9 @@ ul {
   padding-top: var(--header-height);
   display: flex;
   flex-direction: column;
-  background: hsl(var(--clr-secondary));
-
+  /* background: hsl(var(--app-background)); */
+  background: hsla(var(--app-background), 0.9);
+  transition: background 0.5 ease-in-out;
   height: 100vh;
   width: 100vw;
 }
