--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -9,12 +9,11 @@
 .card {
   overflow: hidden;
 
-  background-color: hsl(var(--clr-complementary));
+  /* background-color: hsl(var(--clr-complementary)); */
   background: rgba(255, 255, 255, 0.07);
   border-radius: 0.75rem;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
+  backdrop-filter: blur(45px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   color: var(--clr-accent);
   height: fit-content;
