--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -32,7 +32,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: 0 !important;
+  margin-right: 0;
   justify-content: center;
+}
+
+.github-icon {
+  margin-left: auto;
+  margin-right: 0.5rem;
 }
 
 .app-nav.fade {
