--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,7 +24,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
   scroll-behavior: smooth;
 }
 
@@ -32,6 +32,18 @@ body {
   font-family: "Poppins", sans-serif;
   background: transparent;
   overflow: hidden;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 ul {
@@ -48,8 +60,8 @@ ul {
   padding-top: var(--header-height);
   display: flex;
   flex-direction: column;
-  /* background: hsl(var(--app-background)); */
-  background: hsla(var(--app-background), 0.9);
+  /* background: hsl(var(--bg-app)); */
+  background: hsla(var(--bg-app), 0.9);
   transition: background 0.5 ease-in-out;
   height: 100vh;
   width: 100vw;
@@ -65,8 +77,8 @@ ul {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  width: auto;
+  background: linear-gradient(to bottom, transparent, var(--shadow));
+  width: 100%;
   overflow: hidden;
   height: 4rem;
   pointer-events: none;
@@ -79,7 +91,7 @@ ul {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background: var(--background-input);
+  background: var(--bg-input);
   border-radius: 8px;
   height: 10px;
 }
@@ -122,7 +134,7 @@ ul {
   width: -moz-fit-content;
   width: fit-content;
   width: auto;
-  color: var(--label-color);
+  color: var(--clr-label);
 }
 
 /* Symbols */
