--- a/src/styles/avatar.css
+++ b/src/styles/avatar.css
@@ -9,7 +9,7 @@
   width: 64px;
   height: 64px;
   font-size: small;
-  background-color: var(--background-input);
+  background-color: var(--bg-input);
 }
 
 .placeholder .figure {
