--- a/src/styles/color-switcher.css
+++ b/src/styles/color-switcher.css
@@ -1,55 +1,57 @@
-.hidden {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-
-.toggle-wrapper {
+.switcher {
   display: flex;
   position: relative;
+  justify-content: space-between;
+  align-items: center;
+  user-select: none;
 }
 
-.toggle {
-  height: 4.063rem;
-  background: hsla(var(--clr-text-light), 0.9);
-  border-radius: 0.5rem;
-  padding: 0.75rem;
-  position: relative;
-  transition: background var(--smooth);
+.switcher-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   cursor: pointer;
 }
 
-.toggle input {
-  opacity: 0;
+.switcher-input + .darkmode {
+  background: red;
+}
+
+.switcher-input + .lightmode {
+  background: blue;
+}
+
+.dark-input {
+  display: none;
   position: absolute;
-  top: 0;
-}
-
-.toggle .icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  transform: translateX(-50%);
+  width: 100%;
   height: 100%;
+  border-radius: 0.375rem;
+  appearance: none;
 }
 
-.toggle:hover {
-  background: hsla(var(--black), 0.09);
+.slider {
+  display: flex;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  background-color: #d1d5db;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  flex-shrink: 0;
+  align-items: center;
+  width: 2.5rem;
+  height: 0.5rem;
+  border-radius: 9999px;
+  cursor: pointer;
 }
 
-.sun {
-  /* stroke */
-
-  fill: hsla(var(--dark), 0.9);
-  color: hsla(var(--dark), 0.9);
-  transition: color 0.5s ease;
+/* if dark input is checked */
+.dark-input:checked + .slider {
+  background-color: blue;
+  transform: translateX(1.25rem);
 }
-
-.moon {
-  fill: hsla(var(--white), 55%, 1);
-  color: hsla(var(--white), 55%, 1);
-  transition: color 0.5s ease;
+.dark-input:checked + .slider::after {
+  background-color: white;
+  transform: translateX(0.25rem);
 }
