--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -37,31 +37,33 @@
   /* Transition */
   --smooth: all 0.5s 0s ease;
 
-  /* App */
-  --app-background: hsl(var(--light));
-  --oposite-color: hsl(var(--dark));
-  --paper-background: rgb(244, 244, 244);
-  --background-input: #eff2f9;
-  --color-placeholder: rgb(159, 166, 187);
-  --label-color: rgb(130, 139, 162);
-  --input-background: #eff2f9;
+  /* Backgrounds */
+  --bg-app: hsl(var(--light));
+  --bg-header: hsl(var(--dark));
+  --bg-input: #eff2f9;
 
-  --disabled-background: hsl(240, 10%, 95%);
-  --disabled-color: hsl(240, 10%, 80%);
+  --paper-background: rgb(244, 244, 244);
+  --color-placeholder: rgb(159, 166, 187);
+  --clr-label: rgb(130, 139, 162);
+
+  --background-disabled: hsl(240, 10%, 95%);
+  --clr-disabled: hsl(240, 10%, 80%);
 
   /* Header */
-  --header-height: 6rem;
+  --header-height: 3rem;
 }
 
 /* Color scheme toggle */
 .app[data-theme="dark"] {
-  --app-background: var(--dark);
+  --bg-app: var(--dark);
+  --bg-header: hsl(var(--dark));
   --clr-text: hsl(var(--white));
   --clr-text-title: hsl(var(--white));
 }
 
 .app[data-theme="light"] {
-  --app-background: var(--light);
+  --bg-app: var(--light);
+  --bg-header: hsl(var(--white));
   --clr-text: hsl(var(--black));
   --clr-text-title: hsl(var(--black));
   /* --dark: 0, 0%, 96%; */
