--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -9,7 +9,7 @@
   width: clamp(100px, fit-content, 100%);
   height: 100%;
   line-height: normal;
-  background-color: var(--input-background, --white);
+  background-color: var(--bg-input, --white);
   outline: currentcolor none medium;
   border: 0px none;
   resize: vertical;
