--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -19,15 +19,15 @@
   height: 3rem;
   border-radius: 0.25rem;
   transform: translateX(0px);
-  background-color: var(--selected-background, var(--background-input));
+  background-color: var(--selected-background, var(--bg-input));
   pointer-events: auto;
 }
 
 .level-selector.disabled {
   cursor: not-allowed;
   pointer-events: none;
-  background: var(--disabled-background);
-  --selected-thumb: var(--disabled-color);
+  background: var(--background-disabled);
+  --selected-thumb: var(--clr-disabled);
 }
 
 .level:not(.selected) {
